[gd_scene load_steps=3 format=3 uid="uid://pcfvw2oy6oxl"]

[ext_resource type="Script" uid="uid://uoc4mpkiguts" path="res://nodos/custom_signals.gd" id="1_bbc53"]
[ext_resource type="Script" uid="uid://c10puxgbub40h" path="res://nodos/custom_signals_child.gd" id="2_qv2wl"]

[node name="CustomSignals" type="Node2D"]
script = ExtResource("1_bbc53")

[node name="CustomSignalsChild" type="Node2D" parent="."]
script = ExtResource("2_qv2wl")

[connection signal="signal_after_ready" from="." to="." method="_on_signal_after_ready"]
[connection signal="signal_with_parameters" from="." to="." method="_on_signal_with_parameters"]
